# dictation-helper

./: CMakeLists.txt  README.md  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediaplayerwidget.cpp  mediaplayerwidget.h  mediaplayerwidget.ui  myqmpwidget.cpp  playercontroller.cpp  playercontroller.h
qmpwidget/: README.txt  qmpwidget.cpp
